@@ -1,44 +1,0 @@
-/*
- * Copyright 1993 by OpenVision Technologies, Inc.
- * 
- * Permission to use, copy, modify, distribute, and sell this software
- * and its documentation for any purpose is hereby granted without fee,
- * provided that the above copyright notice appears in all copies and
- * that both that copyright notice and this permission notice appear in
- * supporting documentation, and that the name of OpenVision not be used
- * in advertising or publicity pertaining to distribution of the software
- * without specific, written prior permission. OpenVision makes no
- * representations about the suitability of this software for any
- * purpose.  It is provided "as is" without express or implied warranty.
- * 
- * OPENVISION DISCLAIMS ALL WARRANTIES WITH REGARD TO THIS SOFTWARE,
- * INCLUDING ALL IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS, IN NO
- * EVENT SHALL OPENVISION BE LIABLE FOR ANY SPECIAL, INDIRECT OR
- * CONSEQUENTIAL DAMAGES OR ANY DAMAGES WHATSOEVER RESULTING FROM LOSS OF
- * USE, DATA OR PROFITS, WHETHER IN AN ACTION OF CONTRACT, NEGLIGENCE OR
- * OTHER TORTIOUS ACTION, ARISING OUT OF OR IN CONNECTION WITH THE USE OR
- * PERFORMANCE OF THIS SOFTWARE.
- */
-
-#include "gssapiP_generic.h"
-
-OM_uint32 generic_gss_release_oid_set(minor_status, set)
-     OM_uint32 *minor_status;
-     gss_OID_set *set;
-{
-   size_t index;
-
-   *minor_status = 0;
-
-   if (*set == GSS_C_NULL_OID_SET)
-      return(GSS_S_COMPLETE);
-
-   for (index=0; index<(*set)->count; index++)
-     xfree((*set)->elements[index].elements);
-   xfree((*set)->elements);
-   xfree(*set);
-
-   *set = GSS_C_NULL_OID_SET;
-
-   return(GSS_S_COMPLETE);
-}
